--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@
 --------------------------------------------------------------*/
 :root {
   scroll-behavior: smooth;
+  --brand-color: #6d32ad;
 }
 
 body {
@@ -18,7 +19,7 @@ body {
 }
 
 a {
-  color: #4154f1;
+  color: var(--brand-color);
   text-decoration: none;
 }
 
@@ -48,7 +49,7 @@ section {
   letter-spacing: 1px;
   font-weight: 700;
   margin: 0;
-  color: #4154f1;
+  color: var(--brand-color);
   text-transform: uppercase;
 }
 .section-header p {
@@ -120,7 +121,7 @@ section {
   right: 15px;
   bottom: 15px;
   z-index: 99999;
-  background: #4154f1;
+  background: var(--brand-color);
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -214,10 +215,10 @@ section {
   margin-left: 5px;
 }
 .navbar a:hover, .navbar .active, .navbar .active:focus, .navbar li:hover > a {
-  color: #4154f1;
+  color: var(--brand-color);
 }
 .navbar .getstarted, .navbar .getstarted:focus {
-  background: #4154f1;
+  background: var(--brand-color);
   padding: 8px 20px;
   margin-left: 30px;
   border-radius: 4px;
@@ -255,7 +256,7 @@ section {
   font-size: 12px;
 }
 .navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
-  color: #4154f1;
+  color: var(--brand-color);
 }
 .navbar .dropdown:hover > ul {
   opacity: 1;
@@ -340,7 +341,7 @@ section {
   color: #012970;
 }
 .navbar-mobile a:hover, .navbar-mobile .active, .navbar-mobile li:hover > a {
-  color: #4154f1;
+  color: var(--brand-color);
 }
 .navbar-mobile .getstarted, .navbar-mobile .getstarted:focus {
   margin: 15px;
@@ -366,7 +367,7 @@ section {
   font-size: 12px;
 }
 .navbar-mobile .dropdown ul a:hover, .navbar-mobile .dropdown ul .active:hover, .navbar-mobile .dropdown ul li:hover > a {
-  color: #4154f1;
+  color: var(--brand-color);
 }
 .navbar-mobile .dropdown > .dropdown-active {
   display: block;
@@ -399,7 +400,7 @@ section {
   border-radius: 4px;
   transition: 0.5s;
   color: #fff;
-  background: #4154f1;
+  background: var(--brand-color);
   box-shadow: 0px 5px 30px rgba(65, 84, 241, 0.4);
 }
 .hero .btn-get-started span {
@@ -465,7 +466,7 @@ section {
 .about h3 {
   font-size: 14px;
   font-weight: 700;
-  color: #4154f1;
+  color: var(--brand-color);
   text-transform: uppercase;
 }
 .about h2 {
@@ -483,7 +484,7 @@ section {
   border-radius: 4px;
   transition: 0.5s;
   color: #fff;
-  background: #4154f1;
+  background: var(--brand-color);
   box-shadow: 0px 5px 25px rgba(65, 84, 241, 0.3);
 }
 .about .btn-read-more span {
@@ -547,7 +548,7 @@ section {
   font-size: 42px;
   line-height: 0;
   margin-right: 20px;
-  color: #4154f1;
+  color: var(--brand-color);
 }
 .counts .count-box span {
   font-size: 36px;
@@ -587,7 +588,7 @@ section {
   transition: 0.3s;
 }
 .features .feature-box:hover i {
-  background: #4154f1;
+  background: var(--brand-color);
   color: #fff;
 }
 .features .feture-tabs {
@@ -619,8 +620,8 @@ section {
   border-radius: 0;
 }
 .features .feture-tabs .nav-link.active {
-  color: #4154f1;
-  border-bottom: 3px solid #4154f1;
+  color: var(--brand-color);
+  border-bottom: 3px solid var(--brand-color);
 }
 .features .feture-tabs .tab-content h4 {
   font-size: 18px;
@@ -632,7 +633,7 @@ section {
   font-size: 24px;
   line-height: 0;
   margin-right: 8px;
-  color: #4154f1;
+  color: var(--brand-color);
 }
 .features .feature-icons {
   margin-top: 120px;
@@ -853,17 +854,17 @@ section {
   display: inline-block;
   padding: 8px 40px 10px 40px;
   border-radius: 50px;
-  color: #4154f1;
+  color: var(--brand-color);
   transition: none;
   font-size: 16px;
   font-weight: 400;
   font-family: "Nunito", sans-serif;
   font-weight: 600;
   transition: 0.3s;
-  border: 1px solid #4154f1;
+  border: 1px solid var(--brand-color);
 }
 .pricing .btn-buy:hover {
-  background: #4154f1;
+  background: var(--brand-color);
   color: #fff;
 }
 .pricing .featured {
@@ -875,7 +876,7 @@ section {
   z-index: 1;
   font-size: 14px;
   padding: 1px 0 3px 0;
-  background: #4154f1;
+  background: var(--brand-color);
   color: #fff;
 }
 
@@ -898,7 +899,7 @@ section {
 }
 .faq .accordion-button:not(.collapsed) {
   background: none;
-  color: #4154f1;
+  color: var(--brand-color);
   border-bottom: 0;
 }
 .faq .accordion-body {
@@ -932,8 +933,8 @@ section {
   border: 1px solid #fff;
 }
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
-  color: #4154f1;
-  border-color: #4154f1;
+  color: var(--brand-color);
+  border-color: var(--brand-color);
 }
 .portfolio #portfolio-flters li:last-child {
   margin-right: 0;
@@ -1020,7 +1021,7 @@ section {
 }
 .portfolio .portfolio-wrap .portfolio-links a {
   color: #fff;
-  background: #4154f1;
+  background: var(--brand-color);
   margin: 10px 2px;
   width: 36px;
   height: 36px;
@@ -1077,10 +1078,10 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #4154f1;
+  border: 1px solid var(--brand-color);
 }
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #4154f1;
+  background-color: var(--brand-color);
 }
 .portfolio-details .portfolio-info {
   padding: 30px;
@@ -1165,10 +1166,10 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #4154f1;
+  border: 1px solid var(--brand-color);
 }
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #4154f1;
+  background-color: var(--brand-color);
 }
 .testimonials .swiper-slide {
   opacity: 0.3;
@@ -1292,10 +1293,10 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #4154f1;
+  border: 1px solid var(--brand-color);
 }
 .clients .clients-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #4154f1;
+  background-color: var(--brand-color);
 }
 
 /*--------------------------------------------------------------
@@ -1348,7 +1349,7 @@ section {
   font-size: 18px;
 }
 .recent-blog-posts .post-box:hover .post-title {
-  color: #4154f1;
+  color: var(--brand-color);
 }
 .recent-blog-posts .post-box:hover .post-img img {
   transform: rotate(6deg) scale(1.2);
@@ -1365,7 +1366,7 @@ section {
 .contact .info-box i {
   font-size: 38px;
   line-height: 0;
-  color: #4154f1;
+  color: var(--brand-color);
 }
 .contact .info-box h3 {
   font-size: 20px;
@@ -1428,7 +1429,7 @@ section {
   border-radius: 0;
 }
 .contact .php-email-form input:focus, .contact .php-email-form textarea:focus {
-  border-color: #4154f1;
+  border-color: var(--brand-color);
 }
 .contact .php-email-form input {
   padding: 10px 15px;
@@ -1437,7 +1438,7 @@ section {
   padding: 12px 15px;
 }
 .contact .php-email-form button[type=submit] {
-  background: #4154f1;
+  background: var(--brand-color);
   border: 0;
   padding: 10px 30px;
   color: #fff;
@@ -1491,7 +1492,7 @@ section {
   transition: 0.3s;
 }
 .blog .entry .entry-title a:hover {
-  color: #4154f1;
+  color: var(--brand-color);
 }
 .blog .entry .entry-meta {
   margin-bottom: 15px;
@@ -1528,7 +1529,7 @@ section {
 }
 .blog .entry .entry-content .read-more a {
   display: inline-block;
-  background: #4154f1;
+  background: var(--brand-color);
   color: #fff;
   padding: 6px 20px;
   transition: 0.3s;
@@ -1583,7 +1584,7 @@ section {
   transition: 0.3s;
 }
 .blog .entry .entry-footer a:hover {
-  color: #4154f1;
+  color: var(--brand-color);
 }
 .blog .entry .entry-footer .cats {
   list-style: none;
@@ -1670,7 +1671,7 @@ section {
   transition: 0.3s;
 }
 .blog .blog-comments .comment h5 a:hover {
-  color: #4154f1;
+  color: var(--brand-color);
 }
 .blog .blog-comments .comment h5 .reply {
   padding-left: 10px;
@@ -1751,7 +1752,7 @@ section {
   justify-content: center;
 }
 .blog .blog-pagination li.active, .blog .blog-pagination li:hover {
-  background: #4154f1;
+  background: var(--brand-color);
 }
 .blog .blog-pagination li.active a, .blog .blog-pagination li:hover a {
   color: #fff;
@@ -1794,7 +1795,7 @@ section {
   font-size: 16px;
   padding: 0 15px;
   margin: -1px;
-  background: #4154f1;
+  background: var(--brand-color);
   color: #fff;
   transition: 0.3s;
   border-radius: 0 4px 4px 0;
@@ -1818,7 +1819,7 @@ section {
   transition: 0.3s;
 }
 .blog .sidebar .categories ul a:hover {
-  color: #4154f1;
+  color: var(--brand-color);
 }
 .blog .sidebar .categories ul a span {
   padding-left: 5px;
@@ -1842,7 +1843,7 @@ section {
   transition: 0.3s;
 }
 .blog .sidebar .recent-posts h4 a:hover {
-  color: #4154f1;
+  color: var(--brand-color);
 }
 .blog .sidebar .recent-posts time {
   display: block;
@@ -1872,8 +1873,8 @@ section {
 }
 .blog .sidebar .tags ul a:hover {
   color: #fff;
-  border: 1px solid #4154f1;
-  background: #4154f1;
+  border: 1px solid var(--brand-color);
+  background: var(--brand-color);
 }
 .blog .sidebar .tags ul a span {
   padding-left: 5px;
@@ -1925,7 +1926,7 @@ section {
   font-size: 16px;
   padding: 0 30px;
   margin: 3px;
-  background: #4154f1;
+  background: var(--brand-color);
   color: #fff;
   transition: 0.3s;
   border-radius: 4px;
@@ -2018,7 +2019,7 @@ section {
   line-height: 1;
 }
 .footer .footer-top .footer-links ul a:hover {
-  color: #4154f1;
+  color: var(--brand-color);
 }
 .footer .footer-top .footer-contact p {
   line-height: 26px;
